First python app

--- a/templates/hi.html
+++ b/templates/hi.html
@@ -123,7 +123,7 @@ color: white;
   </nav>
 
   <!-- Header - set the background image for the header in the line below -->
-  <header class="py-5 bg-image-full" style="background-image: url('https://images.pexels.com/photos/2769274/pexels-photo-2769274.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');">
+  <header class="py-5 bg-image-full" style="background-image: url('https://images.pexels.com/photos/3773836/pexels-photo-3773836.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500');">
     <img class="img-fluid d-block mx-auto" src="https://scontent.facc1-1.fna.fbcdn.net/v/t1.0-9/100743743_974313229693865_3931673724876488704_n.jpg?_nc_cat=108&_nc_sid=8bfeb9&_nc_eui2=AeFdQs5QEn4CeBlRNr2HOjicdMg5TSrN9v10yDlNKs32_afGNA6YhpbukS2jgVSHpNaMjIzJ9YQ1arnidonBbpis&_nc_ohc=Y75dsLAob_UAX9DOs0Y&_nc_ht=scontent.facc1-1.fna&oh=29a064de85ea24bbc03f23332e2d218d&oe=5FAF7BF5" alt="">
   </header>
 
