--- a/templates/hi.html
+++ b/templates/hi.html
@@ -162,9 +162,11 @@ color: white;
       <p class="lead">Html</p>
       <p>Ruby</p>
       <p class="lead">JavaScript</p>
+</div>
 
-    </div>
   </section>
+
+  <iframe width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" id="gmap_canvas" src="https://maps.google.com/maps?width=520&amp;height=400&amp;hl=en&amp;q=Golf%20city%20main%20street%20Accra+(GIU)&amp;t=&amp;z=12&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe> <a href='https://add-map.org/'>My Location</a> <script type='text/javascript' src='https://maps-generator.com/google-maps-authorization/script.js?id=178c1f953151acc615900ab536722b7581040b35'></script>
 
   <section class="py-5">
     <div id="contact" class="container">
@@ -181,6 +183,7 @@ color: white;
       </p>
     </div>
   </section>
+
 
 
 
