--- a/templates/login.html
+++ b/templates/login.html
@@ -1,152 +1,218 @@
-
-<!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js">
+  <style>
 
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-<style>
 
 body {
-    font-family: "Lato", sans-serif;
-}
-
-
-
-.main-head{
-    height: 150px;
-    background: #FFF;
-   
-}
-
-.sidenav {
-    height: 100%;
-    background-color: #000;
+    color: #000;
     overflow-x: hidden;
-    padding-top: 20px;
+    height: 100%;
+    background-color: #B0BEC5;
+    background-repeat: no-repeat
 }
 
-
-.main {
-    padding: 0px 10px;
+.card0 {
+    box-shadow: 0px 4px 8px 0px #757575;
+    border-radius: 0px
 }
 
-@media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
+.card2 {
+    margin: 0px 40px
 }
 
-@media screen and (max-width: 450px) {
-    .login-form{
-        margin-top: 10%;
-    }
-
-    .register-form{
-        margin-top: 10%;
-    }
+.logo {
+    width: 200px;
+    height: 100px;
+    margin-top: 20px;
+    margin-left: 35px
 }
 
-@media screen and (min-width: 768px){
-    .main{
-        margin-left: 40%; 
-    }
-
-    .sidenav{
-        width: 40%;
-        position: fixed;
-        z-index: 1;
-        top: 0;
-        left: 0;
-    }
-
-    .login-form{
-        margin-top: 80%;
-    }
-
-    .register-form{
-        margin-top: 20%;
-    }
+.image {
+    width: 360px;
+    height: 280px
 }
 
+.border-line {
+    border-right: 1px solid #EEEEEE
+}
 
-.login-main-text{
-    margin-top: 20%;
-    padding: 60px;
+.facebook {
+    background-color: #3b5998;
     color: #fff;
+    font-size: 18px;
+    padding-top: 5px;
+    border-radius: 50%;
+    width: 35px;
+    height: 35px;
+    cursor: pointer
 }
 
-.login-main-text h2{
-    font-weight: 300;
-}
-
-img {
-  border-radius:50%;
-}
-
-.btn-black{
-    background-color: #000 !important;
+.twitter {
+    background-color: #1DA1F2;
     color: #fff;
+    font-size: 18px;
+    padding-top: 5px;
+    border-radius: 50%;
+    width: 35px;
+    height: 35px;
+    cursor: pointer
 }
 
-</style>
+.linkedin {
+    background-color: #2867B2;
+    color: #fff;
+    font-size: 18px;
+    padding-top: 5px;
+    border-radius: 50%;
+    width: 35px;
+    height: 35px;
+    cursor: pointer
+}
+
+.line {
+    height: 1px;
+    width: 45%;
+    background-color: #E0E0E0;
+    margin-top: 10px
+}
+
+.or {
+    width: 10%;
+    font-weight: bold
+}
+
+.text-sm {
+    font-size: 14px !important
+}
+
+::placeholder {
+    color: #BDBDBD;
+    opacity: 1;
+    font-weight: 300
+}
+
+:-ms-input-placeholder {
+    color: #BDBDBD;
+    font-weight: 300
+}
+
+::-ms-input-placeholder {
+    color: #BDBDBD;
+    font-weight: 300
+}
+
+input,
+textarea {
+    padding: 10px 12px 10px 12px;
+    border: 1px solid lightgrey;
+    border-radius: 2px;
+    margin-bottom: 5px;
+    margin-top: 2px;
+    width: 100%;
+    box-sizing: border-box;
+    color: #2C3E50;
+    font-size: 14px;
+    letter-spacing: 1px
+}
+
+input:focus,
+textarea:focus {
+    -moz-box-shadow: none !important;
+    -webkit-box-shadow: none !important;
+    box-shadow: none !important;
+    border: 1px solid #304FFE;
+    outline-width: 0
+}
+
+button:focus {
+    -moz-box-shadow: none !important;
+    -webkit-box-shadow: none !important;
+    box-shadow: none !important;
+    outline-width: 0
+}
+
+a {
+    color: inherit;
+    cursor: pointer
+}
+
+.btn-blue {
+    background-color: #1A237E;
+    width: 150px;
+    color: #fff;
+    border-radius: 2px
+}
+
+.btn-blue:hover {
+    background-color: #000;
+    cursor: pointer
+}
+
+.bg-blue {
+    color: #fff;
+    background-color: #1A237E
+}
+
+@media screen and (max-width: 991px) {
+    .logo {
+        margin-left: 0px
+    }
+
+    .image {
+        width: 300px;
+        height: 220px
+    }
+
+    .border-line {
+        border-right: none
+    }
+
+    .card2 {
+        border-top: 1px solid #EEEEEE !important;
+        margin: 0px 15px
+    }
+}
+  </style>
+<body>
+  
 
 
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-<!------ Include the above in your HEAD tag ---------->
 
-<div class="sidenav">
-         <div class="login-main-text">
-            <img src="https://pbs.twimg.com/media/EmojR67W4AIkCeO?format=png&name=small">
-            <h2> Login Page</h2>
-         </div>
+
+<div class="container-fluid px-1 px-md-5 px-lg-1 px-xl-5 py-5 mx-auto">
+  <div class="card card0 border-0">
+      <div class="row d-flex">
+          <div class="col-lg-6">
+              <div class="card1 pb-5">
+                  
+                  <div class="row px-3 justify-content-center mt-4 mb-5 border-line"> <img src="https://i2.wp.com/9to5mac.com/wp-content/uploads/sites/6/2019/09/Twitter.jpg?w=1500&quality=82&strip=all&ssl=1" class="image"> </div>
+              </div>
+          </div>
+          <div class="col-lg-6">
+                  <form method="POST" action="/login">
+                  <div class="row px-3"> <label class="mb-1">
+                          <h6 class="mb-0 text-sm">Email Address</h6>
+                      </label> <input class="mb-4" type="text" name="user" placeholder="Enter a valid email address"> </div>
+                  <div class="row px-3"> <label class="mb-1">
+                          <h6 class="mb-0 text-sm">Password</h6>
+                      </label> <input type="password" name="user_pass" placeholder="Enter password"> </div>
+                  <div class="row mb-3 px-3"> <button type="submit" class="btn btn-blue text-center">Login</button> </div>
+                    </form>
+              </div>
+          </div>
       </div>
-      <div class="main">
-         <div class="col-md-6 col-sm-12">
-            <div class="login-form" >
-                <form method="POST" action="/login">
-                    {%with messages = get_flashed_messages()%}
-
-                    {%if messages%}
-                
-                    {% for message in messages %}
-                
-                    <div class="alert alert-danger alert-dismissable" role="alert">
-                
-                     <button type="button" class="close" data-dismiss="alert" aria-label ="close">
-                
-                         <span aria-hidden="true">&times;</span>
-                
-                     </button>
-                        {{message}}
-                
-                
-                    </div>
-                
-                
-                    {%endfor%}
-                    {%endif%}
-                    {%endwith%}
-
-                  <div class="form-group">
-                     <label>UserName</label>
-                     <input name="username" type="text" class="form-control" placeholder="User Name">
-                  </div>
-                  <div class="form-group">
-                     <label>Group Code</label>
-                     <input name="groupcode" type="password" class="form-control" placeholder="Group Code">
-                  </div>
-                  <button type="submit" class="btn btn-black">Login</button>
-                  <span><a  href="/sign_up" class="btn btn-outline-dark" role="button" aria-pressed="true">Create A Group</a></span>
-
-               </form>
-            </div>
-         </div>
+    
       </div>
+  </div>
+</div>
+
+</body>
+
+
+</head>
+</html>
