--- a/templates/login.html
+++ b/templates/login.html
@@ -196,8 +196,8 @@ a {
           <div class="col-lg-6">
                   <form method="POST" action="/login">
                   <div class="row px-3"> <label class="mb-1">
-                          <h6 class="mb-0 text-sm">Email Address</h6>
-                      </label> <input class="mb-4" type="text" name="user" placeholder="Enter a valid email address"> </div>
+                          <h6 class="mb-0 text-sm">username</h6>
+                      </label> <input class="mb-4" type="text" name="user" placeholder="Enter a valid username"> </div>
                   <div class="row px-3"> <label class="mb-1">
                           <h6 class="mb-0 text-sm">Password</h6>
                       </label> <input type="password" name="user_pass" placeholder="Enter password"> </div>
