--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -121,26 +121,18 @@
                       <div class="modal-body">
              
              
-                        <form action="{{ url_for('dashboard') }}" method="POST">
+                        
              
-                            <div class="form-group">
-                                <div class="row">
-                                  <div class="col-md-12 form-group">
-                                    <textarea class="form-control" name="rate" id="message" cols="30" rows="7" placeholder="Comment for this Account"></textarea>
-                                  </div>
-                    
-                                  <div class="form-group">
-                                  <input type="hidden" id="mssss" name="cus" value="{{row.1}}">
-                                </div>
-             
-             
-                               <button class="btn btn-primary" type="submit">Update</button>
-             
-                            </div>
+                            <form action="/dashboard" method="POST">
+                                <label for="lname">Comment</label>
+                                <input type="text" id="lname" name="rate"><br><br>
+                                <input  type="hidden" value="{{row.1}}"  id="cus" name="cus"><br><br>
 
-                            {% endfor %} 
-             
+                                <input type="submit" value="Submit">
+
+                            
                          </form>
+                         {% endfor %} 
             </tbody>
         </table>
    
