--- a/templates/tweet.html
+++ b/templates/tweet.html
@@ -43,7 +43,7 @@ mark {
         <span><input name="tweet" type="text" placeholder="Type Something......."></span>
         </div>
         <span><button type="submit" class="btn btn-outline-dark" role="button" aria-pressed="true"> Start</button></span>
-        <span><a href="/stop" type="submit" class="btn btn-outline-dark" role="button" aria-pressed="true"> Stop</a></span>
+        <!-- <span><a href="/stop" type="submit" class="btn btn-outline-dark" role="button" aria-pressed="true"> Stop</a></span> -->
       </div>
 
     </form>
