--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -77,12 +77,22 @@
             <tr>
                 
                 {% for row in req %}
+
+
+
+                
                 
                 <td>{{row[0]}} </td>
                 <td>{{row[1]}}</td>
                 
+                {% if row[4] == "Active" %}
                 <td class="p-3 mb-2 bg-primary text-white">{{row[4]}}</td>
-           
+                
+                {% elif row[4] == "Disabled" %}
+                <td class="p-3 mb-2 bg-danger text-white">{{row[4]}}</td>
+                {% endif %}
+
+
                 <td>{{row[3]}}</td>
                 <td>
                     <a href="/edit/{{row.0}}" class="btn btn-warning btn-xs" data-toggle="modal" data-target="#modaledit{{row.0}}">Edit</a>
